<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_profile"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        android:text="@string/profile_fragment"
        android:layout_below="@id/imgProfile"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtProfile"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etEmailId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etName"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        android:background="@color/white"
        android:hint="@string/Email"
        android:backgroundTint="@color/white"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:maxLength="25"/>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etEmailId"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        android:background="@color/white"
        android:hint="@string/PhoneNumber"
        android:backgroundTint="@color/white"
        android:maxLines="1"
        android:inputType="phone"
        android:maxLength="25"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etPhoneNumber"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        android:background="@color/white"
        android:hint="@string/address"
        android:backgroundTint="@color/white"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:maxLength="25"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:padding="8dp"
        android:text="@string/save"
        android:textSize="18sp" />


</RelativeLayout>